# flash_decision

./: .env  .env.dev  .env.prod  .env.secrets.sample  .env.tests  .gitignore  .pre-commit-config.yaml  20230427_2328-f6d2e72d94cd_init.py  Makefile  README.md  docker-compose.archive.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.tests.yaml  docker-compose.yaml  flash_decision.db  flash_decision.py  pyproject.toml  requirements.txt  tests.env  tips.txt  vetur.config.js
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.db  Dockerfile.sql  main.py  pyproject.toml
backend/app/: bootstrap.py  main.py
backend/app/adapters/api/: fastapi.py
backend/app/api/: fastapi.py
backend/app/api/dependencies/: dependencies.py
backend/app/api/endpoints/: decision.py  iteration.py  scoreboard.py  session.py  session_decision.py  session_iteration.py  support.py  user.py
backend/app/api/schemas/: base.py  decision.py  scoreboard.py  session.py  session_decision.py  session_iteration.py  support.py  user.py
backend/app/domain/: base.py  cache.py  decision.py  iteration.py  repository.py  scoreboard.py  session.py  session_decision.py  session_iteration.py  session_provider.py  session_result.py  session_user_summary.py  support.py  ticker.py  unit_of_work.py  user.py
backend/app/domain/interfaces/: db.py  provider.py  repository.py  unit_of_work.py
backend/app/infrastructure/: db.py  nosql.py  sql.py
backend/app/infrastructure/cache/: base.py  redis.py
backend/app/infrastructure/databases/: nosql.py  sql.py
backend/app/infrastructure/external_api/: provider.py  session_provider.py
backend/app/infrastructure/orm/: __init__.py  auth.py  base.py  decision.py  mapper.py  session.py  session_decision.py  user.py
backend/app/infrastructure/repositories/: base.py  decision.py  identity_map.py  iteration.py  scoreboard.py  session.py  session_iteration.py  user.py
backend/app/infrastructure/units_of_work/: base.py  base_nosql.py  base_sql.py
backend/app/services/: base.py  decision.py  iteration.py  scoreboard.py  session.py  session_decision.py  session_iteration.py  support.py  user.py  user_authorization.py
backend/app/services/interfaces/: command.py  observer.py  service.py  state.py
backend/app/system/: config.py  constants.py  exceptions.py  logger.py  metaclasses.py
backend/db/alembic/: README  env.py
backend/db/alembic/versions_development/: 20230506_0046-0f3ba2d3f4d0_init.py  20230509_1432-21900c5b0bd0_add_auth_table.py  20230702_1428-254f53f7bfde_add_session_table.py  20230803_2227-ea50fe080d40_.py  20230803_2227-ea50fe080d40_add_decision_table.py  20230805_1619-4c37148edf9a_add_col_iter.py
backend/db/alembic/versions_production/: 20230506_0046-74d320d13510_init.py  20230509_1430-cfeca6e8aa73_add_auth_table.py  20230702_1439-620cad508b0a_add_session_table.py  20230803_2228-f6cc97f0e8c1_.py  20230803_2228-f6cc97f0e8c1_add_decision_table.py  20230805_1621-0569a71f3725_add_col_iter.py
backend/tests/: conftest.py
backend/tests/_mock_data/: mock_iteration_01.json  provider_av_crypto_mock_success_data.json  provider_av_stocks_mock_success_tickers.csv
backend/tests/e2e/: __init__.py
backend/tests/e2e/modules/: frontend_elements.py
backend/tests/integration/api/: test_integration_api.py
backend/tests/integration/infrastructure/: conftest.py  test_integration_cache.py  test_integration_db.py  test_integration_nosql.py  test_integration_repositories.py  test_integration_sql.py  test_integration_uow.py
backend/tests/integration/provider/: conftest.py  test_integration_session_provider.py
backend/tests/mock_data/: provider_av_stocks_mock_success_data.json
backend/tests/unit/: conftest.py  mock_session_providers.py
backend/tests/unit/domain/: test_unit_domain_session_provider.py
backend/tests/unit/services/: conftest.py  test_unit_service_decision.py  test_unit_service_iteration.py  test_unit_service_scoreboard.py  test_unit_service_session.py  test_unit_service_session_decision.py  test_unit_service_session_iteration.py  test_unit_service_support.py  test_unit_service_user.py  test_unit_service_user_authorization.py
backend/tests/unit/system/: test_unit_system_config.py  test_unit_system_logger.py
flash_backend/: .dockerignore  Dockerfile  Dockerfile.backend  Dockerfile.tests  alembic.ini  entrypoint.sh  flash_backend.py  flash_decision.py  main.py  pyproject.toml  requirements.txt  settings_logs.yaml
flash_backend/app/: __init__.py  api.py  config.py  constants.py  db.py  fastapi.py  forms.py  functions.py  logger.py  models.py  routes.py  service.py
flash_backend/app/api/: fastapi.py  support.py
flash_backend/app/api/endpoints/: support.py  user.py
flash_backend/app/api/schemas/: user.py
flash_backend/app/domain/: auth.py  base.py  user.py
flash_backend/app/infrastructure/: db.py
flash_backend/app/infrastructure/orm/: __init__.py  base.py  mapper.py  user.py
flash_backend/app/infrastructure/repositories/: base.py  user.py
flash_backend/app/libs/: mixins.py
flash_backend/app/models/: __init__.py  base.py  user.py
flash_backend/app/schemas/: base.py  support.py
flash_backend/app/services/: healthchecker.py  support.py  user.py
flash_backend/app/static/js/: terminal_hotkeys.js  terminal_timer.js
flash_backend/app/system/: config.py  constants.py  exceptions.py  logger.py
flash_backend/app/templates/: index.html  login.html  terminal.html
flash_backend/db/: alembic.ini
flash_backend/db/alembic/: env.py
flash_backend/db/alembic/versions_development/: 20230506_0046-0f3ba2d3f4d0_init.py  20230509_1432-21900c5b0bd0_add_auth_table.py
flash_backend/db/db_init/: init.sql
flash_backend/migrations/: alembic.ini
flash_backend/migrations/versions/: 3c3e87d497da_.py  59ca4717df8e_.py  78dd505648c6_.py  99b2de58809b_.py  a44d22fcebf8_.py  d16440742b31_.py  e8d289f8d563_.py  f0e52ac8e062_.py  fc3f5637108d_.py
flash_backend/tests/e2e/: Dockerfile  config.py  test_e2e.py
flash_backend/tests/integration/: __init__.py
flash_backend/upload_folder/: 10_SBER.csv
(+140 files in other folders)
