[tool.poetry]
name = "flash-decision"
version = "1.0.0"
description = "Application for training securities trading skills"
authors = ["Aleksei Semenov <amiter@yandex.ru>"]
readme = "README.md"
packages = [{ include = "flash_decision" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.10"
asyncpg = "^0.27.0"
pandas = "^2.0.0"
structlog = "^23.1.0"
python-dotenv = "^1.0.0"
rich = "^13.3.3"
asgi-logger = "^0.1.0"
pydantic = "^1.10.7"
alembic = "^1.10.3"
python-json-logger = "^2.0.7"
attrs = "^23.1.0"
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
ruff = "^0.0.267"
black = "^23.3.0"
pre-commit = "^3.3.1"
isort = "^5.12.0"

[tool.poetry.group.test.dependencies]
pydantic = "^1.10.7"
requests = "^2.28.2"
selenium = "^4.8.3"
webdriver-manager = "^3.8.5"
types-requests = "^2.28.11.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ["flash_backend_archive"]
ignore_missing_imports = true
follow_imports = "silent"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.ruff]
select = [
    "A",
    "B",
    "C",
    "E",
    "F",
    "G",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
ignore = [
    "A002",
    "A003",
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN102",
    "ANN401",
    "ARG001",
    "ARG002",
    "B008",
    "COM812",
    "DTZ003",
    "E501",
    "EM102",
    "F541",
    "INP001",
    "N812",
    "PLR2004",
    "PT009",
    "PT018",
    "RET504",
    "RET505",
    "S101",
    "S113",
    "S311",
    "SIM300",
    "SLF001",
    "TCH002",
    "TRY003",
]
fixable = [
    "A",
    "B",
    "C",
    "E",
    "F",
    "G",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
unfixable = []
line-length = 100

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
profile = "black"
src_paths = ["app/"]
known_first_party = ["e2e"]
known_third_party = ["fastapi"]
